# Mani-GPT

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/franka_grasp/lib/franka_grasp/: grasp
install/franka_grasp/share/franka_grasp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/franka_grasp/share/franka_grasp/cmake/: franka_graspConfig.cmake
install/grasp_msg/share/grasp_msg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/grasp_msg/share/grasp_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  export_grasp_msg__rosidl_generator_cExport-noconfig.cmake  export_grasp_msg__rosidl_generator_pyExport-noconfig.cmake  export_grasp_msg__rosidl_generator_pyExport.cmake  export_grasp_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_grasp_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  grasp_msgConfig.cmake  grasp_msg__rosidl_typesupport_cExport.cmake  grasp_msg__rosidl_typesupport_cppExport.cmake  grasp_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  grasp_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/grasp_msg/share/grasp_msg/msg/: GraspMessage.idl  JointPos.idl  JointPos.msg
install/grasp_publisher/lib/grasp_publisher/: gpt
install/grasp_publisher/share/grasp_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: manigpt_launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
src/franka_grasp/: CMakeLists.txt
src/franka_grasp/src/: grasp.cpp
src/grasp_msg/: CMakeLists.txt
src/grasp_msg/msg/: GraspMessage.msg
src/grasp_publisher/: setup.cfg  setup.py
src/grasp_publisher/grasp_publisher/: GPT.py  camera_capture.py  ik.py  owl_vit.py  point_cloud_grasp_sample.py
src/grasp_publisher/grasp_publisher/Detic/: demo.py  predict.py
src/grasp_publisher/grasp_publisher/Detic/detic/: config.py
src/grasp_publisher/grasp_publisher/scenic/: =1.10.2
(+426 files in other folders)
